--- a/aboutme.html
+++ b/aboutme.html
@@ -17,34 +17,35 @@
     <li><a href="boxgame.html">Box game</a></li>
     <li><a href="gold.html">Gold Dig game</a></li>
     <li><a href="vindinium.html">about vindinium</a></li>
+    <li><a href="tictac.html">tic tac</a></li>
   </ul>
 </div>
      <h1 style="font-size:50px; font-family: Cursive; text-align:center;color:white">About Me</h1>
         <h2 style="font-family: Arial;text-align:center;font-size:40px"></h2>
         <center><img src="http://s4.evcdn.com/images/edpborder500/I0-001/016/997/103-9.png_/summit-public-schools-summit-prep-tour-141113-03.png" style="height:300px;width:350px"/></center>
       <center>
-        <li>I am a freshman at summit prep.</li>
-        <li>I am 14 years old.</li>
-        <li>I was born in Redwood City, and am still living there to this day.</li>
+        <li id="p">I am a freshman at summit prep.</li>
+        <li id="p">I am 14 years old.</li>
+        <li id="p">I was born in Redwood City, and am still living there to this day.</li>
       </center>
        <img src="http://upload.wikimedia.org/wikipedia/en/6/61/Breaking_Bad_title_card.png" style="float:right;height:300px;width:350px"/>
        <img src="http://www.chicagonow.com/tween-us/files/2012/05/video-game-controller.jpg" style="float:left;height:300px;width:350px"/>
        <ul></ul>
        <ul></ul>
       <center>
-        <li>Breaking Bad is my favorite TV show.</li>
-        <li>I also like to play video games.</li>
-        <li>These are two of my favorite things because it was just something that gained my intrest.</li>
-        <li>The TV show is very intereging and video games are something that I do for fun.</li>
+        <li id="p">Breaking Bad is my favorite TV show.</li>
+        <li id="p">I also like to play video games.</li>
+        <li id="p">These are two of my favorite things because it was just something that gained my intrest.</li>
+        <li id="p">The TV show is very intereging and video games are something that I do for fun.</li>
         </center>
         <center>
           <img src="http://www.squarecatskates.com/assets/images/products/penny%20skateboards/penny-rasta-fade-nickel-skateboard.jpg" style="height:300px;width:350px"/>
         </center>
         <center>
-          <li>One hobby that I really enjoy doing is skating with friends.</li>
-          <li>I like to skate because It's fun and it's a way for me to unwind.</li>
-          <li>I got into skating through my friends and there interest in it.</li>
-          <li>My favorite part about the whole activity is being with my homies and having fun.</li>
+          <li id="p">One hobby that I really enjoy doing is skating with friends.</li>
+          <li id="p">I like to skate because It's fun and it's a way for me to unwind.</li>
+          <li id="p">I got into skating through my friends and there interest in it.</li>
+          <li id="p">My favorite part about the whole activity is being with my homies and having fun.</li>
         </center>
    </body>
 </html>
