--- a/calc.html
+++ b/calc.html
@@ -16,6 +16,7 @@
     <li><a href="boxgame.html">Box game</a></li>
     <li><a href="gold.html">Gold Dig game</a></li>
     <li><a href="vindinium.html">about vindinium</a></li>
+    <li><a href="tictac.html">tic tac</a></li>
   </ul>
 </div>
 <input type ="text" name="Number1" style="width:50px; display:inline-block" id="Number1">
