--- a/hardware.html
+++ b/hardware.html
@@ -17,6 +17,7 @@
     <li><a href="boxgame.html">Box game</a></li>
     <li><a href="gold.html">Gold Dig game</a></li>
     <li><a href="vindinium.html">about vindinium</a></li>
+    <li><a href="tictac.html">tic tac</a></li>
   </ul>
 </div>
  <center><h1 style="font-size:50px; font-family: Cursive; text-align:center;color:white">Hardware</h1>
