--- a/tictac.html
+++ b/tictac.html
@@ -6,12 +6,25 @@
 </head>
 
 <body>
+    <div id="navbar">
+  <ul>
+	<li><a href="HTML.html">HTML</a></li>
+	<li><a href="aboutme.html">About Me</a></li>
+	<li><a href="index.html">Welcome</a></li>
+	<li><a href="hardware.html">Hardware</a></li>
+    <li><a href="calc.html">Calculator</a> </li>
+    <li><a href="boxgame.html">Box game</a></li>
+    <li><a href="gold.html">Gold Dig game</a></li>
+    <li><a href="vindinium.html">about vindinium</a></li>
+    <li><a href="tictac.html">tic tac</a></li>
+  </ul>
+</div>
     <center>
         <h1>Tic Tac Toe</h1>
         <font color="red">By: Bryan Corona Villa and Blas Julian Sanchez</font>
     </center>
     <center>
-        <button type="button" id="clear button">New Game</button>
+         <form><input type=button value="New Game" onClick="history.go()"></form>
     </center>
     <center>
         <div class="container">
