--- a/gold.html
+++ b/gold.html
@@ -16,6 +16,7 @@
     <li><a href="boxgame.html">Box game</a></li>
     <li><a href="gold.html">Gold Dig game</a></li>
     <li><a href="vindinium.html">about vindinium</a></li>
+    <li><a href="tictac.html">tic tac</a></li>
   </ul>
 </div>
     
