--- a/vindinium.html
+++ b/vindinium.html
@@ -18,6 +18,7 @@ To change this template use Tools | Templates.
     <li><a href="boxgame.html">Box game</a></li>
     <li><a href="gold.html">Gold Dig game</a></li>
     <li><a href="vindinium.html">about vindinium</a></li>
+    <li><a href="tictac.html">tic tac</a></li>
   </ul>
 </div>
     <h1 style="font-size:50px; font-family: Cursive; text-align:center;color:white">What is Vindinium?</h1>
