--- a/hardware.html
+++ b/hardware.html
@@ -43,7 +43,7 @@
   <p> all these components all have their own jobs, but they need a way to communicate</p>
   <p>they do this through the use of electrons, what most people call, electricity.</p>
   <div>
-    <img src="http://www.build-your-own-computer.net/image-files/computer-mice-08.jpg"/><img src="http://www.replacementlaptopkeys.com/images/zaggfolio_keyboard_key_replacement.jpg"/><img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/LG_L194WT-SF_LCD_monitor.jpg"/></div>
+    <img src="http://www.build-your-own-computer.net/image-files/computer-mice-08.jpg"/><img src="http://xahlee.info/kbd/i/Chromebook_keyboard.jpg"/><img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/LG_L194WT-SF_LCD_monitor.jpg"/></div>
     <p>This is the mouse, keyboard, and monitor of the computer</p>
     <p>These are the interactive parts of the computer and they each have their own purpose.</p>
     <p>The mouse is used to move around the curser and click/interact with the internet.</p>
